java-hello-world-webapp/cicd/argocd/java-hello-world-webapp-joske-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: java-helloi-world-joske
    app.kubernetes.io/component: java-hello-world-webapp-joske
    app.kubernetes.io/instance: java-hello-world-webapp-joske
  name: java-hello-world-webapp-joske
  namespace: joske3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: java-hello-world-webapp-joske
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: java-hello-world-webapp-joske
    spec:
      containers:
      - image: nexus.arbetsformedlingen.se/app-af-nexus-example/java-hello-world-webapp-joske:1.0_20221005-145718_ce144fc
        imagePullPolicy: IfNotPresent
        name: java-hello-world-webapp-joske
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
