java-hello-world-webapp/cicd/argocd/java-hello-world-webapp-joske-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-hello-world-webapp
    app.kubernetes.io/component: java-hello-world-webapp
    app.kubernetes.io/instance: java-hello-world-webapp
  name: java-hello-world-webapp
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  - name: 9990-tcp
    port: 9990
  selector:
    deployment: java-hello-world-webapp-joske
